--- a/lyx/slides.lyx
+++ b/lyx/slides.lyx
@@ -88,7 +88,7 @@ Regional Shocks, Migration and Homeownership
 \end_layout
 
 \begin_layout Author
-Florian Oswald
+Florian Oswald, UCL
 \begin_inset Newline newline
 \end_inset
 
@@ -100,16 +100,15 @@ status open
 
 
 \backslash
-vspace{10pt}
+vspace{1cm}
 \end_layout
 
 \end_inset
 
-University College London
-\begin_inset Newline newline
-\end_inset
 
-
+\size largest
+\color blue
+Seminar am Deutschen Institut für Wirtschaftsforschung, Berlin
 \end_layout
 
 \begin_layout BeginFrame
@@ -1080,14 +1079,17 @@ Blanchard and Katz (1992)
 status open
 
 \begin_layout BeginFrame
-Related literature
+Related literature 
 \end_layout
+
+\begin_layout Standard
+\begin_inset Note Note
+status open
 
 \begin_layout Itemize
 On the effects of 2007 bust on unemployment and mobility: 
 \end_layout
 
-\begin_deeper
 \begin_layout Itemize
 
 \size footnotesize
@@ -1096,6 +1098,7 @@ empirical: Ferreira et al.
  (2013)
 \end_layout
 
+\begin_deeper
 \begin_layout Itemize
 
 \size footnotesize
@@ -1117,11 +1120,35 @@ vspace{3mm}
 \end_layout
 
 \end_deeper
+\end_inset
+
+
+\end_layout
+
 \begin_layout Itemize
 Housing demand over the lifecycle:
 \size footnotesize
  Attanasio et al.
  (2012), and Li, Meghir and Oswald (2014)
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+vspace{3mm}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+Lifecycle models of saving and retirement: 
+\size footnotesize
+French, De Nardi and Jones (2010), Haan and Prowse (2013) 
 \end_layout
 
 \end_inset
@@ -1728,15 +1755,15 @@ In each period, household
 \end_layout
 
 \begin_layout Itemize
-Where to live,
+How much to save,
 \end_layout
 
 \begin_layout Itemize
-How much to save, and
+Whether to own or rent, and
 \end_layout
 
 \begin_layout Itemize
-Whether to own or rent.
+Where to live.
 \end_layout
 
 \begin_layout Standard
@@ -1764,6 +1791,22 @@ In each period, household
 \end_layout
 
 \begin_layout Itemize
+How much to save: 
+\begin_inset Formula $a_{it+1}$
+\end_inset
+
+, and
+\end_layout
+
+\begin_layout Itemize
+Whether to own or rent: 
+\begin_inset Formula $h_{it}\in\{0,1\}$
+\end_inset
+
+, and
+\end_layout
+
+\begin_layout Itemize
 Where to live: choose region 
 \begin_inset Formula $d\in D$
 \end_inset
@@ -1779,36 +1822,20 @@ Where to live: choose region
 .
 \end_layout
 
-\begin_layout Itemize
-How much to save: 
-\begin_inset Formula $a_{it+1}$
-\end_inset
-
-, and
-\end_layout
-
-\begin_layout Itemize
-Whether to own or rent: 
-\begin_inset Formula $h_{it}\in\{0,1\}$
-\end_inset
-
-.
-\end_layout
-
 \begin_layout Standard
 These choices are subject to
 \end_layout
 
 \begin_layout Itemize
-Budget constraints, which are shaped by 
+Budget constraints: 
 \begin_inset Formula $\left(a_{it},z_{it},h_{it-1},q_{dt},p_{dt}\right)$
 \end_inset
 
-, and
+.
 \end_layout
 
 \begin_layout Itemize
-Beliefs about the future 
+Beliefs about the future: 
 \begin_inset Formula $\left(p_{dt+1},q_{dt+1},z_{it+1},s_{it+1}\right)$
 \end_inset
 
@@ -2245,7 +2272,7 @@ Moving Costs:
 
 \begin_layout Standard
 \begin_inset Note Note
-status collapsed
+status open
 
 \begin_layout Plain Layout
 emphasize 4 things on this slide:
@@ -2311,122 +2338,6 @@ logit shock captures moves made for other reasons than income or housing.
 \begin_layout Standard
 \begin_inset Branch 90mins
 status open
-
-\begin_layout Standard
-\begin_inset Note Note
-status collapsed
-
-\begin_layout BeginFrame
-Timing
-\end_layout
-
-\begin_layout Enumerate
-observe stochastic 
-\begin_inset Formula $\mathbf{P}_{t}$
-\end_inset
-
-, 
-\begin_inset Formula $z_{it}$
-\end_inset
-
- and
-\family roman
-\series medium
-\shape up
-\size normal
-\emph off
-\bar no
-\strikeout off
-\uuline off
-\uwave off
-\noun off
-\color none
- 
-\begin_inset Formula $\varepsilon_{it}=\left(\varepsilon_{i1t},\varepsilon_{i2t},\dots,\varepsilon_{iDt}\right)$
-\end_inset
-
-,
-\family default
-\series default
-\shape default
-\size default
-\emph default
-\bar default
-\strikeout default
-\uuline default
-\uwave default
-\noun default
-\color inherit
- iid location taste shock 
-\begin_inset Formula $\sim$
-\end_inset
-
- EV Type 1
-\end_layout
-
-\begin_layout Enumerate
-earn labor income in current region 
-\begin_inset Formula $d$
-\end_inset
-
-, as a function of 
-\begin_inset Formula $\overline{y}_{dt}$
-\end_inset
-
- and 
-\begin_inset Formula $z_{it}$
-\end_inset
-
-
-\end_layout
-
-\begin_layout Enumerate
-given state 
-\begin_inset Formula $x_{it}$
-\end_inset
-
-, compute optimal value in each location:
-\end_layout
-
-\begin_deeper
-\begin_layout Itemize
-optimal consumption 
-\begin_inset Formula $c_{h}^{*}$
-\end_inset
-
- conditional on housing choice 
-\begin_inset Formula $h\in\{0,1\}$
-\end_inset
-
- in all regions 
-\begin_inset Formula $d$
-\end_inset
-
-
-\end_layout
-
-\begin_layout Itemize
-choose optimal housing 
-\begin_inset Formula $h_{d}^{*}(c_{h}^{*})$
-\end_inset
-
-
-\end_layout
-
-\begin_layout Itemize
-choose optimal location, based on the value of optimal housing in each location
- and location shock 
-\begin_inset Formula $\varepsilon$
-\end_inset
-
-
-\end_layout
-
-\end_deeper
-\end_inset
-
-
-\end_layout
 
 \begin_layout BeginFrame
 Homeownership Choice
@@ -2544,7 +2455,7 @@ Labor Income
 
 \begin_layout Standard
 \begin_inset Note Note
-status collapsed
+status open
 
 \begin_layout Plain Layout
 Define the price of human capital by 
@@ -2610,7 +2521,7 @@ People have to move to
 \end_layout
 
 \begin_layout Itemize
-They can predict deterministic part of income: 
+They know average log wages: 
 \family roman
 \series medium
 \shape up
@@ -2625,7 +2536,7 @@ They can predict deterministic part of income:
 
 \begin_inset Formula 
 \[
-\eta_{d'}\ln q_{d't+1}+f(t+1)
+E\left[\eta_{d'}\ln q_{d't+1}|q_{d,t}\right]+f(t+1)
 \]
 
 \end_inset
@@ -3082,6 +2993,19 @@ FHFA for regional house price indeces.
 
 \begin_layout BeginFrame
 Estimation Outline
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hypertarget{CurseDim}{}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -3096,6 +3020,22 @@ Estimate a model of household beliefs:
 \begin_layout Itemize
 An unrestricted model suffers from the curse of dimensionality: 20-dimensional
  integration problem.
+ 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hyperlink{CurseDimDetail}{
+\backslash
+beamergotobutton{details}}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Itemize
@@ -3114,84 +3054,6 @@ I will fix some parameters, and
 
 \begin_layout Itemize
 Estimate the remaining behavioural parameters with SMM.
-\end_layout
-
-\end_deeper
-\begin_layout BeginFrame
-The Curse of Dimensionality: Regional Prices.
-\end_layout
-
-\begin_layout Itemize
-If 
-\begin_inset Formula $q_{dt}$
-\end_inset
-
- and 
-\begin_inset Formula $p_{dt}$
-\end_inset
-
- are unrestricted Markovian processes, computing the expectation of 
-\begin_inset Formula $\overline{v}(x)$
-\end_inset
-
- is a 20-dimensional integration problem (integrate over 
-\begin_inset Formula $z,s,\mathbf{q},\mathbf{p}$
-\end_inset
-
-).
-\end_layout
-
-\begin_layout Itemize
-Assuming 3 points for each grid 
-\begin_inset Formula $q_{d}$
-\end_inset
-
- and 
-\begin_inset Formula $p_{d}$
-\end_inset
-
-, this implies 
-\begin_inset Formula $3^{18}$
-\end_inset
-
- points for 
-\begin_inset Formula $\mathbf{q},\mathbf{p}$
-\end_inset
-
- alone.
-\end_layout
-
-\begin_layout Itemize
-If there are 
-\begin_inset Formula $N$
-\end_inset
-
- other states, we have 
-\begin_inset Formula $N\times3^{18}$
-\end_inset
-
- points in the state space
-\end_layout
-
-\begin_layout Itemize
-In current version of the model, 
-\begin_inset Formula $N=156.672$
-\end_inset
-
-, thus we would have
-\end_layout
-
-\begin_deeper
-\begin_layout Standard
-\begin_inset Formula 
-\[
-60.697.942.852.608
-\]
-
-\end_inset
-
-points to compute one solution.
- This is currently infeasible.
 \end_layout
 
 \end_deeper
@@ -3295,10 +3157,6 @@ Average wealth conditional on
 
 
 \end_layout
-
-\begin_layout Standard
-\begin_inset Branch 90mins
-status open
 
 \begin_layout BeginPlainFrame
 
@@ -3975,11 +3833,6 @@ explain MCMC
 
 \end_layout
 
-\end_inset
-
-
-\end_layout
-
 \begin_layout BeginFrame
 Model Fit
 \end_layout
@@ -4071,10 +3924,6 @@ it is possible to estimate the moving cost for an actual mover.
 
 
 \end_layout
-
-\begin_layout Standard
-\begin_inset Branch 90mins
-status open
 
 \begin_layout BeginFrame
 Model Fit 
@@ -4326,12 +4175,767 @@ status open
 
 \end_layout
 
+\begin_layout BeginFrame
+More Properties
+\end_layout
+
 \begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hypertarget{Properties}{}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hyperlink{PropMovingCosts}{
+\backslash
+beamergotobutton{Moving Costs.}}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hyperlink{PropDecomp}{
+\backslash
+beamergotobutton{Decomposing Moving Costs.}}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hyperlink{PropCS}{
+\backslash
+beamergotobutton{Comparative Statics: Effect of large shocks.}}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Section
+Value of migration 
+\end_layout
+
+\begin_layout BeginPlainFrame
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+vspace{1cm}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+\align center
+
+\series bold
+\size largest
+\color blue
+Value of the migration option
+\end_layout
+
+\begin_layout BeginFrame
+Value of the migration option
+\end_layout
+
+\begin_layout Itemize
+Migration flows are small, regional shocks are big.
+\end_layout
+
+\begin_layout Itemize
+Is migration important?
+\end_layout
+
+\begin_layout Itemize
+Compare two scenarios:
+\end_layout
+
+\begin_deeper
+\begin_layout Enumerate
+Baseline
+\end_layout
+
+\begin_layout Enumerate
+Cannot move away from West North Central
+\end_layout
+
+\end_deeper
+\begin_layout BeginPlainFrame
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float table
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hspace*{-2pt}
+\backslash
+makebox[
+\backslash
+linewidth][c]{%
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+input{
+\backslash
+Dropbox/model/experiments/highMC/mig_value1.tex}
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+Value of migration option in WNC.
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout BeginPlainFrame
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float table
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hspace*{-2pt}
+\backslash
+makebox[
+\backslash
+linewidth][c]{%
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+input{
+\backslash
+Dropbox/model/experiments/highMC/mig_value2.tex}
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+Value of migration option in WNC.
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout BeginPlainFrame
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float table
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hspace*{-2pt}
+\backslash
+makebox[
+\backslash
+linewidth][c]{%
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+input{
+\backslash
+Dropbox/model/experiments/highMC/mig_value-edit.tex}
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+Value of migration option in WNC.
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
 
 \end_layout
 
 \begin_layout BeginFrame
-Properties I: Moving Costs
+Value of migration by age
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hspace*{2pt}
+\backslash
+makebox[
+\backslash
+linewidth][c]{%
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+\begin_inset Graphics
+	filename /Users/florianoswald/Dropbox/mobility/output/model/experiments/highMC/values_pres.pdf
+	scale 85
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Section
+Policy Experiments
+\end_layout
+
+\begin_layout BeginPlainFrame
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+vspace{1cm}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+\align center
+
+\series bold
+\size largest
+\color blue
+Abolishing the Mortgage Interest Deduction
+\end_layout
+
+\begin_layout BeginFrame
+Mortgage Interest Deduction
+\end_layout
+
+\begin_layout Itemize
+Owner-occupiers in the USA can deduct the interest paid on the mortgage
+ from taxable income.
+\end_layout
+
+\begin_layout Itemize
+The mortgage insterest deduction has been discussed many times in the tax
+ policy literature:
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+
+\size small
+Poterba (1974, 1992), Poterba and Sinai (2008), Gervais (2002), Glaeser
+ (2011), Glaeser and Shapiro (2002), Gervais and Pandey (2008).
+\end_layout
+
+\end_deeper
+\begin_layout Itemize
+Big tax expenditure: $72 billion in 2014.
+\end_layout
+
+\begin_layout Itemize
+Economic rationale for the deduction is not clear.
+\end_layout
+
+\begin_layout BeginFrame
+Abolishing the Mortgage Interest Deduction
+\end_layout
+
+\begin_layout Itemize
+What is the impact of abolishing the deduction on welfare, ownership and
+ mobility?
+\end_layout
+
+\begin_layout Itemize
+Would abolishing it lead to an increase in mobility?
+\end_layout
+
+\begin_layout Itemize
+Difficult question, because such a large tax policy change will have GE
+ effects.
+\end_layout
+
+\begin_layout Itemize
+Use results from GE model by Sommer and Sullivan (2013): 5% reduction in
+ eqm.
+ prices.
+\end_layout
+
+\begin_layout BeginFrame
+Sommer and Sullivan (2013)
+\end_layout
+
+\begin_layout Itemize
+With inelastic housing supply, deduction is capitalized into house prices.
+\end_layout
+
+\begin_layout Itemize
+Removing deduction lowers equilibrium prices by 5%.
+\end_layout
+
+\begin_layout Itemize
+Lower prices allow more low-wealth households to buy (lower downpayment).
+\end_layout
+
+\begin_layout Itemize
+Rents stay constant.
+\end_layout
+
+\begin_layout BeginFrame
+Abolishing the Mortgage Interest Deduction
+\end_layout
+
+\begin_layout Itemize
+Use estimates of average tax savings from Poterba and Sinai (2007).
+\end_layout
+
+\begin_layout Itemize
+Raise taxes for owners by amount equal to average deduction in income-age
+ band.
+\end_layout
+
+\begin_layout Itemize
+Redistribute the collected proceeds on a per-capita, per-period basis.
+\end_layout
+
+\begin_layout Itemize
+Adjust rent-to-price ratios 
+\begin_inset Formula $\kappa_{d}$
+\end_inset
+
+ so that rent stays constant.
+\end_layout
+
+\begin_layout BeginFrame
+Abolishing the Mortgage Interest Deduction
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float table
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hspace*{-2pt}
+\backslash
+makebox[
+\backslash
+linewidth][c]{%
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+input{
+\backslash
+Dropbox/model/experiments/MortgageSubsidy/mortgage_pres-edit.tex}
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout BeginFrame
+The Proportion of 
+\series bold
+\size largest
+\emph on
+\color blue
+Move to Buy 
+\emph default
+Changes
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float table
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hspace*{-2pt}
+\backslash
+makebox[
+\backslash
+linewidth][c]{%
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+input{
+\backslash
+Dropbox/model/experiments/MortgageSubsidy/mortgage_change_mv.tex}
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout BeginFrame
+Welfare Gains by Age
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename /Users/florianoswald/Dropbox/mobility/output/model/experiments/MortgageSubsidy/change_age.pdf
+	scale 65
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout BeginFrame
+Welfare Gains by Income and Housing Status
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename /Users/florianoswald/Dropbox/mobility/output/model/experiments/MortgageSubsidy/change_hy.pdf
+	scale 65
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout BeginFrame
+Welfare Gains by Age and Income Quartile
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename /Users/florianoswald/Dropbox/mobility/output/model/experiments/MortgageSubsidy/change_wy.pdf
+	scale 65
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Section
+Conclusion
+\end_layout
+
+\begin_layout BeginFrame
+Conclusion
+\end_layout
+
+\begin_layout Itemize
+Constructed a model of migration over the lifecycle capable of dealing with
+ aggregate shocks.
+\end_layout
+
+\begin_layout Itemize
+The migration option has a large value.
+\end_layout
+
+\begin_layout Itemize
+Homeownership: important.
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+Affects probability of moving.
+\end_layout
+
+\begin_layout Itemize
+Affects response to shocks.
+\end_layout
+
+\end_deeper
+\begin_layout Itemize
+Abolishing the mortgage interest deduction:
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+Has a negligible impact on migration.
+\end_layout
+
+\begin_layout Itemize
+But large welfare impacts.
+\end_layout
+
+\end_deeper
+\begin_layout BeginFrame
+To do
+\end_layout
+
+\begin_layout Itemize
+Add amenities (regional fixed effect).
+\end_layout
+
+\begin_layout Itemize
+relax restrictions of factor model (trends?, three agg.
+ factors?)
+\end_layout
+
+\begin_layout Itemize
+Default?
+\end_layout
+
+\begin_layout Itemize
+Move income model into structural model?
+\end_layout
+
+\begin_layout BeginPlainFrame
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+vspace{1cm}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\noindent
+\align center
+
+\series bold
+\size largest
+\color blue
+Appendix
+\end_layout
+
+\begin_layout BeginFrame
+Properties: Moving Costs
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hypertarget{PropMovingCosts}{}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -4371,8 +4975,42 @@ Dropbox/model/experiments/moneyMC/moneyMC2.tex}
 Moving cost for young mover in Kennan and Walker (2011): $384,000
 \end_layout
 
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hyperlink{Properties}{
+\backslash
+beamergotobutton{back}}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout BeginFrame
-Properties II: Decomposing moving costs for owners
+Properties: Decomposing moving costs for owners
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hypertarget{PropDecomp}{}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -4469,6 +5107,19 @@ Transaction cost
 ).
 \end_layout
 
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hyperlink{Properties}{
+\backslash
+beamergotobutton{back}}
+\end_layout
+
 \end_inset
 
 
@@ -4476,6 +5127,22 @@ Transaction cost
 
 \begin_layout BeginFrame
 Effect of large regional shocks
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hypertarget{PropCS}{}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Itemize
@@ -4706,8 +5373,22 @@ Elasticity of net migration.
 \end_layout
 
 \begin_layout Standard
-\begin_inset Branch 90mins
+\begin_inset ERT
 status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hyperlink{Properties}{
+\backslash
+beamergotobutton{back}}
+\end_layout
+
+\end_inset
+
+
+\end_layout
 
 \begin_layout BeginFrame
 Sudden change in price level
@@ -4907,19 +5588,6 @@ Elasticity of net migration.
 
 \end_layout
 
-\end_inset
-
-
-\end_layout
-
-\begin_layout Section
-Value of migration 
-\end_layout
-
-\begin_layout BeginPlainFrame
-
-\end_layout
-
 \begin_layout Standard
 \begin_inset ERT
 status open
@@ -4928,617 +5596,14 @@ status open
 
 
 \backslash
-vspace{1cm}
+hyperlink{Properties}{
+\backslash
+beamergotobutton{back}}
 \end_layout
 
 \end_inset
 
 
-\end_layout
-
-\begin_layout Standard
-\noindent
-\align center
-
-\series bold
-\size largest
-\color blue
-Value of migration option
-\end_layout
-
-\begin_layout BeginFrame
-Value of the migration option
-\end_layout
-
-\begin_layout Itemize
-Migration flows are small, regional shocks are big.
-\end_layout
-
-\begin_layout Itemize
-Is migration important?
-\end_layout
-
-\begin_layout Itemize
-Compare two scenarios:
-\end_layout
-
-\begin_deeper
-\begin_layout Enumerate
-Baseline
-\end_layout
-
-\begin_layout Enumerate
-Cannot move away from West North Central
-\end_layout
-
-\end_deeper
-\begin_layout BeginPlainFrame
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset Float table
-wide false
-sideways false
-status open
-
-\begin_layout Plain Layout
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-hspace*{-2pt}
-\backslash
-makebox[
-\backslash
-linewidth][c]{%
-\end_layout
-
-\begin_layout Plain Layout
-
-
-\backslash
-input{
-\backslash
-Dropbox/model/experiments/highMC/mig_value1.tex}
-\end_layout
-
-\begin_layout Plain Layout
-
-}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Plain Layout
-\begin_inset Caption
-
-\begin_layout Plain Layout
-Value of migration option in WNC.
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout BeginPlainFrame
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset Float table
-wide false
-sideways false
-status open
-
-\begin_layout Plain Layout
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-hspace*{-2pt}
-\backslash
-makebox[
-\backslash
-linewidth][c]{%
-\end_layout
-
-\begin_layout Plain Layout
-
-
-\backslash
-input{
-\backslash
-Dropbox/model/experiments/highMC/mig_value2.tex}
-\end_layout
-
-\begin_layout Plain Layout
-
-}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Plain Layout
-\begin_inset Caption
-
-\begin_layout Plain Layout
-Value of migration option in WNC.
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout BeginPlainFrame
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset Float table
-wide false
-sideways false
-status open
-
-\begin_layout Plain Layout
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-hspace*{-2pt}
-\backslash
-makebox[
-\backslash
-linewidth][c]{%
-\end_layout
-
-\begin_layout Plain Layout
-
-
-\backslash
-input{
-\backslash
-Dropbox/model/experiments/highMC/mig_value.tex}
-\end_layout
-
-\begin_layout Plain Layout
-
-}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Plain Layout
-\begin_inset Caption
-
-\begin_layout Plain Layout
-Value of migration option in WNC.
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout BeginFrame
-Value of migration by age
-\end_layout
-
-\begin_layout Standard
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-hspace*{2pt}
-\backslash
-makebox[
-\backslash
-linewidth][c]{%
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\noindent
-\begin_inset Graphics
-	filename /Users/florianoswald/Dropbox/mobility/output/model/experiments/highMC/values_pres.pdf
-	scale 85
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset Branch 90mins
-status open
-
-\begin_layout Section
-Policy Experiments
-\end_layout
-
-\begin_layout BeginPlainFrame
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-vspace{1cm}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\noindent
-\align center
-
-\series bold
-\size largest
-\color blue
-Abolishing the Mortgage Interest Deduction
-\end_layout
-
-\begin_layout BeginFrame
-Mortgage Interest Deduction
-\end_layout
-
-\begin_layout Itemize
-Owner-occupiers in the USA can deduct the interest paid on the mortgage
- from taxable income.
-\end_layout
-
-\begin_layout Itemize
-The mortgage insterest deduction has been discussed many times in the tax
- policy literature:
-\end_layout
-
-\begin_deeper
-\begin_layout Itemize
-
-\size small
-Poterba (1974, 1992), Poterba and Sinai (2008), Gervais (2002), Glaeser
- (2011), Glaeser and Shapiro (2002), Gervais and Pandey (2008).
-\end_layout
-
-\end_deeper
-\begin_layout Itemize
-Big tax expenditure: $72 billion in 2014.
-\end_layout
-
-\begin_layout Itemize
-Economic rationale for the deduction is not clear.
-\end_layout
-
-\begin_layout BeginFrame
-Abolishing the Mortgage Interest Deduction
-\end_layout
-
-\begin_layout Itemize
-What is the impact of abolishing the deduction on welfare, ownership and
- mobility?
-\end_layout
-
-\begin_layout Itemize
-Would abolishing it lead to an increase in mobility?
-\end_layout
-
-\begin_layout Itemize
-Difficult question, because such a large tax policy change will have GE
- effects.
-\end_layout
-
-\begin_layout Itemize
-Use results from stationary GE model by Sommer and Sullivan (2013): 5% reduction
- in eqm.
- prices
-\end_layout
-
-\begin_layout BeginFrame
-Sommer and Sullivan (2013)
-\end_layout
-
-\begin_layout Itemize
-With inelastic housing supply, deduction is capitalized into house prices.
-\end_layout
-
-\begin_layout Itemize
-removing deduction lowers equilibrium prices by 5%.
-\end_layout
-
-\begin_layout Itemize
-lower prices allow more low-wealth households to buy (lower downpayment).
-\end_layout
-
-\begin_layout Itemize
-Rents stay constant.
-\end_layout
-
-\begin_layout BeginFrame
-Abolishing the Mortgage Interest Deduction
-\end_layout
-
-\begin_layout Itemize
-Use estimates of average tax savings from Poterba and Sinai (2007).
-\end_layout
-
-\begin_layout Itemize
-Raise taxes for owners by amount equal to average deduction in income-age
- band.
-\end_layout
-
-\begin_layout Itemize
-Redistribute the collected proceeds on a per-capita, per-period basis.
-\end_layout
-
-\begin_layout Itemize
-Adjust rent-to-price ratios 
-\begin_inset Formula $\kappa_{d}$
-\end_inset
-
- so that rent stays constant.
-\end_layout
-
-\begin_layout BeginFrame
-Abolishing the Mortgage Interest Deduction
-\end_layout
-
-\begin_layout Standard
-\begin_inset Float table
-wide false
-sideways false
-status open
-
-\begin_layout Plain Layout
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-hspace*{-2pt}
-\backslash
-makebox[
-\backslash
-linewidth][c]{%
-\end_layout
-
-\begin_layout Plain Layout
-
-
-\backslash
-input{
-\backslash
-Dropbox/model/experiments/MortgageSubsidy/mortgage_pres.tex}
-\end_layout
-
-\begin_layout Plain Layout
-
-}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout BeginFrame
-Abolishing the Mortgage Interest Deduction
-\end_layout
-
-\begin_layout Standard
-\begin_inset Float table
-wide false
-sideways false
-status open
-
-\begin_layout Plain Layout
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-hspace*{-2pt}
-\backslash
-makebox[
-\backslash
-linewidth][c]{%
-\end_layout
-
-\begin_layout Plain Layout
-
-
-\backslash
-input{
-\backslash
-Dropbox/model/experiments/MortgageSubsidy/mortgage_change_mv.tex}
-\end_layout
-
-\begin_layout Plain Layout
-
-}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Section
-Conclusion
-\end_layout
-
-\begin_layout BeginFrame
-Conclusion
-\end_layout
-
-\begin_layout Itemize
-Constructed a model of migration over the lifecycle capable of dealing with
- aggregate shocks.
-\end_layout
-
-\begin_layout Itemize
-The migration option has a large value.
-\end_layout
-
-\begin_layout Itemize
-Homeownership: important.
-\end_layout
-
-\begin_deeper
-\begin_layout Itemize
-Affects probability of moving.
-\end_layout
-
-\begin_layout Itemize
-Affects response to shocks.
-\end_layout
-
-\end_deeper
-\begin_layout Itemize
-Abolishing the mortgage interest deduction:
-\end_layout
-
-\begin_deeper
-\begin_layout Itemize
-Has a negligible impact on migration.
-\end_layout
-
-\begin_layout Itemize
-But large welfare impacts.
-\end_layout
-
-\end_deeper
-\begin_layout BeginFrame
-To do
-\end_layout
-
-\begin_layout Itemize
-amenities (regional fixed effect)
-\end_layout
-
-\begin_layout Itemize
-distance in moving cost
-\end_layout
-
-\begin_layout Itemize
-relax restrictions of factor model (trends?, three agg.
- factors?)
-\end_layout
-
-\begin_layout Itemize
-income model
-\end_layout
-
-\begin_layout BeginPlainFrame
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-vspace{1cm}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\noindent
-\align center
-
-\series bold
-\size largest
-\color blue
-Appendix
 \end_layout
 
 \begin_layout BeginFrame
@@ -6066,6 +6131,115 @@ Net Present Value of Deduction
 \begin_inset Graphics
 	filename /Users/florianoswald/Dropbox/mobility/output/model/experiments/MortgageSubsidy/npv.pdf
 	scale 60
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout BeginFrame
+The Curse of Dimensionality: Regional Prices.
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hypertarget{CurseDimDetail}{}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+If 
+\begin_inset Formula $q_{dt}$
+\end_inset
+
+ and 
+\begin_inset Formula $p_{dt}$
+\end_inset
+
+ are unrestricted Markovian processes, computing the expectation of 
+\begin_inset Formula $\overline{v}(x)$
+\end_inset
+
+ is a 20-dimensional integration problem (integrate over 
+\begin_inset Formula $z,s,\mathbf{q},\mathbf{p}$
+\end_inset
+
+).
+\end_layout
+
+\begin_layout Itemize
+Assuming 3 points for each grid 
+\begin_inset Formula $q_{d}$
+\end_inset
+
+ and 
+\begin_inset Formula $p_{d}$
+\end_inset
+
+, this implies 
+\begin_inset Formula $3^{18}$
+\end_inset
+
+ points for 
+\begin_inset Formula $\mathbf{q},\mathbf{p}$
+\end_inset
+
+ alone.
+\end_layout
+
+\begin_layout Itemize
+If there are 
+\begin_inset Formula $N$
+\end_inset
+
+ other states, we have 
+\begin_inset Formula $N\times3^{18}$
+\end_inset
+
+ points in the state space
+\end_layout
+
+\begin_layout Itemize
+In current version of the model, 
+\begin_inset Formula $N=156.672$
+\end_inset
+
+, thus we would have
+\end_layout
+
+\begin_deeper
+\begin_layout Standard
+\begin_inset Formula 
+\[
+60.697.942.852.608
+\]
+
+\end_inset
+
+points to compute one solution.
+ This is currently infeasible.
+\end_layout
+
+\end_deeper
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hyperlink{CurseDim}{
+\backslash
+beamergotobutton{back}}
+\end_layout
 
 \end_inset
 
